# xoshiro

./: Makefile  README.md  dune-project
.github/workflows/: ci.yml
bench/: dune  run.ml
crusher/: crusher.ml  dune
docs/: index.html
docs/branch/main/: commit-hash  date
docs/branch/main/make-random/MakeRandom/: index.html
docs/branch/main/make-random/MakeRandom/Basic/: index.html
docs/branch/main/make-random/MakeRandom/Basic64/: index.html
docs/branch/main/make-random/MakeRandom/Bits/: index.html
docs/branch/main/make-random/MakeRandom/Full/: index.html
docs/branch/main/make-random/MakeRandom/Full64/: index.html
docs/branch/main/make-random/MakeRandom/FullHI64/: index.html
docs/branch/main/make-random/MakeRandom/Sig/: index.html
docs/branch/main/make-random/MakeRandom/Utils/: index.html
docs/branch/main/make-random/MakeRandom__/: index.html
docs/branch/main/make-random/MakeRandom__/Basic30/: index.html
docs/branch/main/make-random/MakeRandom__/Bits/: index.html
docs/branch/main/make-random/MakeRandom__/Full30/: index.html
docs/branch/main/make-random/MakeRandom__/Full30Init64/: index.html
docs/branch/main/make-random/MakeRandom__/Full64/: index.html
docs/branch/main/make-random/MakeRandom__/Sig/: index.html
docs/branch/main/make-random/MakeRandom__/Utils/: index.html
docs/branch/main/make-random/MakeRandom__Basic30/: index.html
docs/branch/main/make-random/MakeRandom__Bits/: index.html
docs/branch/main/make-random/MakeRandom__Bits/module-type-BASIC/: index.html
docs/branch/main/make-random/MakeRandom__Bits/module-type-BASIC64/: index.html
docs/branch/main/make-random/MakeRandom__Bits/module-type-Basic30/: index.html
docs/branch/main/make-random/MakeRandom__Full30/: index.html
docs/branch/main/make-random/MakeRandom__Sig/: index.html
docs/branch/main/make-random/MakeRandom__State30/: index.html
docs/branch/main/make-random/MakeRandom__Utils/: index.html
docs/branch/main/xoshiro/: index.html
docs/branch/main/xoshiro/Splitmix64_pure/: index.html
docs/branch/main/xoshiro/Xoshiro/: index.html
docs/branch/main/xoshiro/Xoshiro/Splitmix64/: index.html
docs/branch/main/xoshiro/Xoshiro256plusplus_bindings/: index.html
docs/branch/main/xoshiro/Xoshiro256plusplus_pure/: index.html
docs/tag/0.1/: date
docs/tag/0.1/make-random/: index.html
docs/tag/0.1/make-random/MakeRandom/: index.html
docs/tag/0.1/make-random/MakeRandom__Bits/: index.html
docs/tag/0.1/make-random/MakeRandom__Full30Init64/: index.html
docs/tag/0.1/make-random/MakeRandom__Full64/: index.html
docs/tag/0.1/make-random/MakeRandom__Init30/: index.html
docs/tag/0.1/make-random/MakeRandom__Init64/: index.html
docs/tag/0.1/make-random/MakeRandom__Sig/: index.html
docs/tag/0.1/xoshiro/Splitmix64_pure/: index.html
docs/tag/0.1/xoshiro/Xoshiro/: index.html
make-random/: bits.mli  dune  full30.ml  full64.ml  init30.ml  init64.ml  makeRandom.ml  makeRandom.mli  sig.mli  state30.ml  utils.ml  utils.mli
make-random/test/same-bits/: dune  sameBits.ml
splitmix64/src/pure/: dune  splitmix64_pure.ml
splitmix64/test/crush/: big_crush.ml  crush.ml  dune  small_crush.ml
splitmix64/test/crusher/: crusher.ml  dune
utils/crusher/: libCrusher.ml
utils/same-bits/: dune  libSameBits.ml  sameBits.ml  sameBits.mli
xoshiro/src/: dune  xoshiro.mli
xoshiro/src/bindings/: dune  xoshiro.ml
xoshiro/src/pure/: dune  xoshiro.ml
xoshiro256plusplus/src/bindings/: dune  xoshiro256plusplus_bindings.c  xoshiro256plusplus_bindings.h  xoshiro256plusplus_bindings.ml  xoshiro256plusplus_bindings_stubs.c  xoshiro256plusplus_bindings_stubs.h  xoshiro256plusplus_stubs.c
xoshiro256plusplus/src/pure/: dune  xoshiro256plusplus_pure.ml  xoshiro256plusplus_pure.mli
xoshiro256plusplus/test/bench/: dune  run.ml
xoshiro256plusplus/test/crush/: big_crush.ml  crush.ml  dune
xoshiro256plusplus/test/crusher/: crusher.ml  dune
xoshiro256plusplus/test/same-bits/: README.md  dune  sameBits.ml  sameBitsLL.ml
xoshiro256plusplus/test/same-bits-ll/: dune  sameBitsLL.ml
xoshiro256plusplus/test/testu01/: alphabit.ml  big_crush.ml  block_alphabit.ml  crush.ml  dune  fips_140_2.ml  pseudo_diehard.ml  rabbit.ml  small_crush.ml
(+149 files in other folders)
