(executables
 (names
  alphabit
  big_crush
  block_alphabit
  crush
  fips_140_2
  pseudo_diehard
  rabbit
  small_crush)
 (libraries xoshiro.pure.256++ testu01))

(rule (with-stdout-to alphabit.output       (run ./alphabit.exe)))
(rule (with-stdout-to big_crush.output      (run ./big_crush.exe)))
(rule (with-stdout-to block_alphabit.output (run ./block_alphabit.exe)))
(rule (with-stdout-to crush.output          (run ./crush.exe)))
(rule (with-stdout-to fips_140_2.output     (run ./fips_140_2.exe)))
(rule (with-stdout-to pseudo_diehard.output (run ./pseudo_diehard.exe)))
(rule (with-stdout-to rabbit.output         (run ./rabbit.exe)))
(rule (with-stdout-to small_crush.output    (run ./small_crush.exe)))

;; ;; Alphabit

;; (rule (alias runtest)
;;  (action
;;   (pipe-stdout
;;    (cat alphabit.output)
;;    (system "grep 'All tests were passed'")
;;    (system "wc -l")
;;    (system "grep -q '^3$'"))))

;; ;; BigCrush
;; ;;
;; ;; Disabled by default because it takes way too long.

;; (rule (alias runtest)
;;  (action
;;   (pipe-stdout
;;    (cat big_crush.output)
;;    (system "grep 'All tests were passed'")
;;    (system "wc -l")
;;    (system "grep -q '^1$'")))
;;  (enabled_if false))

;; ;; BlockAlphabit

;; (rule (alias runtest)
;;  (action
;;   (pipe-stdout
;;    (cat block_alphabit.output)
;;    (system "grep 'All tests were passed'")
;;    (system "wc -l")
;;    (system "grep -q '^3$'"))))

;; ;; Crush
;; ;;
;; ;; Disabled by default because it takes way too long.

;; (rule (alias runtest)
;;  (action
;;   (pipe-stdout
;;    (cat crush.output)
;;    (system "grep 'All tests were passed'")
;;    (system "wc -l")
;;    (system "grep -q '^31'")))
;;  (enabled_if false))

;; ;; FIPS-140-2

;; (rule (alias runtest)
;;  (action
;;   (pipe-stdout
;;    (cat fips_140_2.output)
;;    (system "grep 'All tests were passed'")
;;    (system "wc -l")
;;    (system "grep -q '^1$'"))))

;; ;; PseudoDIEHARD

;; (rule (alias runtest)
;;  (action
;;   (pipe-stdout
;;    (cat pseudo_diehard.output)
;;    (system "grep 'All tests were passed'")
;;    (system "wc -l")
;;    (system "grep -q '^1$'"))))

;; ;; Rabbit

;; (rule (alias runtest)
;;  (action
;;   (pipe-stdout
;;    (cat rabbit.output)
;;    (system "grep 'All tests were passed'")
;;    (system "wc -l")
;;    (system "grep -q '^1$'"))))

;; SmallCrush

(rule (alias runtest)
 (action
  (pipe-stdout
   (cat small_crush.output)
   (system "grep 'All tests were passed'")
   (system "wc -l")
   (system "grep -q '^1$'"))))
